# agentville

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PRD.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  work_packet.yml
.github/workflows/: hourly-task-loop.yml
docs/: AGENT_DECISIONS.md  AGENT_DELIVERY_FRAMEWORK.md  EPICS_PLAN.md  GITHUB_TASKS_PLAYBOOK.md  GIT_WORKFLOW.md  HARNESS_BASELINE.md  QUALITY_AND_DOD.md  README.md  TASK_AUTOMATION.md
docs/automation/: AUTONOMOUS_DELIVERY_FLOW.md  HUMAN_GATE_POLICY.md  README.md
scripts/automation/: select_next_work.py  work_queue_selector.py
scripts/github/: bootstrap_labels.sh  bootstrap_project.sh  create_issue.sh  hourly_task_loop.sh
src/arena/: __init__.py  engine.py  enums.py  llm_contract.py  models.py  setup.py
src/llm_arena_mvp.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_delivery_flow.py  test_engine.py  test_llm_contract.py  test_setup.py
