[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentville"
version = "0.1.0"
description = "Zero-player LLM Arena MVP core engine"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
